--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,7 +48,7 @@ jobs:
         run: forge update
 
       - name: Run tests
-        run: forge test --optimize --fork-url https://eth-mainnet.alchemyapi.io/v2/SzNcOCE77s6nmGIal7MxtuzF--q2HZgx --fork-block-number 15441384
+        run: forge test --optimize --fork-url https://eth-mainnet.alchemyapi.io/v2/SzNcOCE77s6nmGIal7MxtuzF--q2HZgx --fork-block-number 15441384 -vv
 
       - name: Run lint check
         run: npm run lint:check
