--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,7 +9,6 @@ jobs:
   run-ci:
     runs-on: ubuntu-latest
     steps:
-
       - uses: actions/checkout@v2
 
       - uses: actions/setup-node@v2
@@ -44,12 +43,12 @@ jobs:
         uses: onbjerg/foundry-toolchain@v1
         with:
           version: nightly
-      
+
       - name: Pull Submodules
         run: forge update
 
       - name: Run tests
-        run: forge test --optimize --fork-url https://eth-mainnet.alchemyapi.io/v2/SzNcOCE77s6nmGIal7MxtuzF--q2HZgx
+        run: forge test --optimize --fork-url https://eth-mainnet.alchemyapi.io/v2/SzNcOCE77s6nmGIal7MxtuzF--q2HZgx --fork-block-number 15441384 -vv
 
       - name: Run lint check
         run: npm run lint:check
@@ -59,7 +58,7 @@ jobs:
           forge coverage --report lcov
         id: coverage
 
-      - uses: codecov/codecov-action@v2        
+      - uses: codecov/codecov-action@v2
 
       # Too slow to run regularly
       #- name: Run audit
