--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/valorem-core"]
 	path = lib/valorem-core
 	url = https://github.com/valorem-labs-inc/valorem-core.git
+[submodule "lib/keep3r-network-v2"]
+	path = lib/keep3r-network-v2
+	url = https://github.com/keep3r-network/keep3r-network-v2.git
