--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "fmt:check": "forge fmt --check",
     "solhint": "solhint --config ./.solhint.json 'src/**/*.sol' --fix",
     "solhint:check": "solhint --config ./.solhint.json 'src/**/*.sol'",
-    "lint": "npm run fmt && npm run solhint",
+    "lint": "npm run solhint && npm run fmt",
     "lint:check": "npm run fmt:check && npm run solhint:check"
   },
   "devDependencies": {
